@startuml conceptual-erd
title DVLD System - Conceptual ERD

skinparam shadowing false
skinparam linetype ortho
skinparam backgroundColor #FFFFFF

entity "Countries" as Countries
entity "People" as People
entity "Users" as Users
entity "Drivers" as Drivers
entity "ApplicationTypes" as ApplicationTypes
entity "Applications" as Applications
entity "LicenseClasses" as LicenseClasses
entity "LocalDrivingLicenseApplications" as LDLApplications
entity "Licenses" as Licenses
entity "InternationalLicenses" as InternationalLicenses
entity "DetainedLicenses" as DetainedLicenses
entity "TestTypes" as TestTypes
entity "TestAppointments" as TestAppointments
entity "Tests" as Tests


Countries ||--o{ People : FK_People_Countries1

People ||--o{ Users : FK_Users_People
People ||--o{ Drivers : FK_Drivers_People
People ||--o{ Applications : FK_Applications_People

Users ||--o{ Applications : FK_Applications_Users
Users ||--o{ Drivers : FK_Drivers_Users
Users ||--o{ Licenses : FK_Licenses_Users
Users ||--o{ InternationalLicenses : FK_InternationalLicenses_Users

Users ||--o{ TestAppointments : FK_TestAppointments_Users
Users ||--o{ Tests : FK_Tests_Users

Users ||--o{ DetainedLicenses : FK_CreatedByUser
Users ||--o{ DetainedLicenses : FK_ReleasedByUser

ApplicationTypes ||--o{ Applications : FK_Applications_ApplicationTypes

Applications ||--o| LDLApplications : FK_DrivingLicsenseApplications_Applications

LicenseClasses ||--o{ LDLApplications : FK_DrivingLicsenseApplications_LicenseClasses

Applications ||--o{ Licenses : FK_Licenses_Applications

Applications ||--o{ InternationalLicenses : FK_InternationalLicenses_Applications

Applications ||--o{ DetainedLicenses : FK_DetainedLicenses_Applications

Drivers ||--|{ Licenses : FK_Licenses_Drivers

LicenseClasses ||--o{ Licenses : FK_Licenses_LicenseClasses

Drivers ||--o{ InternationalLicenses : FK_InternationalLicenses_Drivers

Licenses ||--o{ InternationalLicenses : FK_InternationalLicenses_Licenses

Licenses ||--o{ DetainedLicenses : FK_DetainedLicenses_Licenses

LDLApplications ||--o{ TestAppointments : FK_TestAppointments_LocalDrivingLicenseApplications

TestTypes ||--o{ TestAppointments : FK_TestAppointments_TestTypes

TestAppointments ||--o{ Tests : FK_Tests_TestAppointments

@enduml